<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="52dp">
        <EditText
            android:id="@+id/edt"
            android:hint="@string/hint_location"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <ImageView
            android:id="@+id/gps"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="260dp"
            android:src="@drawable/gps"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/gps_icon"
            android:layout_marginStart="260dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </android.support.v7.widget.CardView>


    <HorizontalScrollView
        android:id="@+id/hsv"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/bar"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/beer"
                    android:contentDescription="@string/beer_icon" />

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>





            <LinearLayout
                android:layout_marginLeft="10dp"
                android:id="@+id/bakery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="10dp">


                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/bakery"
                    android:contentDescription="@string/bakery_icon" />

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/bakery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:id="@+id/delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="10dp">


                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/deliverytruck"
                    android:contentDescription="@string/truck_icon" />

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>


            <LinearLayout
                android:layout_marginLeft="10dp"
                android:id="@+id/takeaway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="10dp">


                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/takeaway"
                    android:contentDescription="@string/takeaway_icon" />

                <TextView
                    android:text="@string/takeaway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:id="@+id/cafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/cafe"
                    android:contentDescription="@string/cafe_icon" />

                <TextView
                    android:text="@string/cafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>




            <LinearLayout
                android:layout_marginLeft="10dp"
                android:id="@+id/museum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/museum"
                    android:contentDescription="@string/museum_icon" />

                <TextView
                    android:text="@string/museum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/club"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables"
                android:layout_marginStart="10dp">


                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/club"
                    android:contentDescription="@string/club_icon" />

                <TextView
                    android:text="@string/night_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>



            <LinearLayout
                android:layout_marginLeft="10dp"
                android:id="@+id/restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="10dp">


                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/restaurant"
                    android:contentDescription="@string/restaurant_icon" />

                <TextView
                    android:text="@string/restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>



            <LinearLayout
                android:id="@+id/spa"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="10dp">


                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/spa"
                    android:contentDescription="@string/spa_icon" />

                <TextView
                    android:text="@string/spa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>




        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>