<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="52dp">
        <EditText
            android:id="@+id/search_tab_search"
android:hint="@string/hint_location"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <ImageView
            android:id="@+id/search_tab_gps"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="260dp"
            android:src="@drawable/gps"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/image_icon"
            android:layout_marginStart="260dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/search_tab_list_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>





    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="52dp">
        <EditText
            android:hint="@string/keyword"
            android:visibility="gone"
            android:id="@+id/search_tab_keyword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </android.support.v7.widget.CardView>



    <Button
        android:visibility="gone"
        android:id="@+id/search_btn"
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>